Add tokio-zmq git dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ crossbeam = "0.7"
 #futures-zmq = "0.5"
 #tokio-zmq = "= 0.9.0"
 #tokio-zmq = "= 0.10.0"
-tokio-zmq = "= 0.10.1"
+#tokio-zmq = "= 0.10.1"
+tokio-zmq = { version = "0.10.2", git = "https://git.asonix.dog/asonix/async-zmq.git", branch = "development" }
 futures = "0.1"
 tokio = "0.1"
 zmq = "0.9"
